# compile_time

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md
test/: CMakeLists.txt  common.hpp  math.cpp  string.cpp
